AM_CFLAGS = -I$(top_srcdir)/include
noinst_PROGRAMS=test01 test02 test03 test03a test04 test04a test05 test06 test07 test07a test08 test09 test09a test09b test09c test10 test10a test11 test11a test12
noinst_SCRIPTS=testit.sh

test01_SOURCES=test01.c
test01_LDADD=$(top_srcdir)/os2/libos2.la
test02_SOURCES=test02.c
test02_LDADD=$(top_srcdir)/os2/libos2.la
test03_SOURCES=test03.c
test03_LDADD=$(top_srcdir)/os2/libos2.la
test03a_SOURCES=test03a.c
test03a_LDADD=$(top_srcdir)/os2/libos2.la
test04_SOURCES=test04.c
test04_LDADD=$(top_srcdir)/os2/libos2.la
test04a_SOURCES=test04a.c
test04a_LDADD=$(top_srcdir)/os2/libos2.la
test05_SOURCES=test05.c
test05_LDADD=$(top_srcdir)/os2/libos2.la
test06_SOURCES=test06.c
test06_LDADD=$(top_srcdir)/os2/libos2.la
test07_SOURCES=test07.c
test07_LDADD=$(top_srcdir)/os2/libos2.la
test07a_SOURCES=test07a.c
test07a_LDADD=$(top_srcdir)/os2/libos2.la
test08_SOURCES=test08.c
test08_LDADD=$(top_srcdir)/os2/libos2.la
test09_SOURCES=test09.c
test09_LDADD=$(top_srcdir)/os2/libos2.la
test09a_SOURCES=test09a.c
test09a_LDADD=$(top_srcdir)/os2/libos2.la
test09b_SOURCES=test09b.c
test09b_LDADD=$(top_srcdir)/os2/libos2.la
test09c_SOURCES=test09c.c
test09c_LDADD=$(top_srcdir)/os2/libos2.la
test10_SOURCES=test10.c
test10_LDADD=$(top_srcdir)/os2/libos2.la
test10a_SOURCES=test10a.c
test10a_LDADD=$(top_srcdir)/os2/libos2.la
test11_SOURCES=test11.c
test11_LDADD=$(top_srcdir)/os2/libos2.la
test11a_SOURCES=test11a.c
test11a_LDADD=$(top_srcdir)/os2/libos2.la
test12_SOURCES=test12.c
test12_LDADD=$(top_srcdir)/os2/libos2.la
